--- a/src/styles/picture.module.scss
+++ b/src/styles/picture.module.scss
@@ -2,14 +2,9 @@
   text-align: center;
 
   img {
-    max-width: 100%; // or a fixed size like 180px
     height: auto;
     border-radius: 8px;
     box-shadow: 0 2px 6px rgba(0, 0, 0, 0.3);
     margin-bottom: 0.5rem;
-  }
-
-  h2 {
-    font-size: 1.2rem;
   }
 }
